--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,2 @@
-# Supabase Configuration
-# Copia este archivo a .env.local y completa con tus credenciales
-
-NEXT_PUBLIC_SUPABASE_URL=tu_url_de_supabase
-NEXT_PUBLIC_SUPABASE_ANON_KEY=tu_anon_key_de_supabase
+# Backend API URL
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
