--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.75.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
@@ -28,6 +30,7 @@
     "recharts": "^3.6.0",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.182.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
@@ -38,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
